Add SSL options to ElasticSearch client - Ingestion & Server (#1548) (#1557)
* Add SSL options to ElasticSearch client - Ingestion & Server (#1548)

* Add SSL options to ElasticSearch client - Ingestion & Server

* Add SSL options to ElasticSearch client - Ingestion & Server

* Issue-1556: Support for ElasticSearch SSL , Bootstrap command create and delete, ingestion updates for change descriptions

* Issue-1556: Fix checkstyle issues

* Issue-1556: Fix checkstyle issues